Fixed overflow bug

--- a/public/results.css
+++ b/public/results.css
@@ -4,7 +4,7 @@ section.results {
 }
 
 [vertical-align=yep] section.results {
-    height: 100%;
+    min-height: 100%;
     justify-content: center;
 }
 
